--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   },
   "dependencies": {
     "vue": "^2.1.0",
-    "vue-resource": "^0.9.3",
-    "vue-router": "^0.7.13"
+    "vue-router": "^2.1.0",
+    "vue-resource": "^1.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.0",
